--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -129,13 +129,12 @@ fake-ip-filter:
     - 'www.msftncsi.com'
     - 'www.msftconnecttest.com'
 proxies:
-  - *
+  - {"name":"Ꮮᝪᑎᑌᑭ","type":"ss","server":"134.195.196.143","port":805,"password":"G!yBwPWH3Vao","cipher":"chacha20-ietf-poly1305"}
 proxy-groups:
-  - name: 🌐ALL ⟪@LonUp_M⟫
+  - name: 👑Groups
     type: select
     proxies:
-      - ⚓Direct
-      - ⛔BLOCK
+      - 🌐ALL 〄 Ꮮᝪᑎᑌᑭ
       - ⚡test⊶1
       - ⚡test⊶2
       - ⚡test⊶3
@@ -149,91 +148,96 @@ proxy-groups:
       - 🧠load-balance⇋3
       - 🧠load-balance⇋4
       - 💦relay
-      - *
+      - ⚓Direct
+      - ⛔BLOCK
+  - name: 🌐ALL 〄 Ꮮᝪᑎᑌᑭ
+    type: select
+    proxies:
+      - Ꮮᝪᑎᑌᑭ
   - name: 💦relay
     type: relay
     proxies:
-      - *
+      - Ꮮᝪᑎᑌᑭ
   - name: ⚡test⊶1
     type: url-test
     url: 'http://www.gstatic.com/generate_204'
     interval: 800
     tolerance: 300
     proxies:
-      - *
+      - Ꮮᝪᑎᑌᑭ
   - name: ⚡test⊶2
     type: url-test
     url: 'http://cp.cloudflare.com/'
     interval: 800
     tolerance: 300
     proxies:
-      - *
+      - Ꮮᝪᑎᑌᑭ
   - name: ⚡test⊶3
     type: url-test
     url: 'http://captive.apple.com'
     interval: 800
     tolerance: 300
     proxies:
-      - *
+      - Ꮮᝪᑎᑌᑭ
   - name: ⚡test⊶4
     type: url-test
     url: 'http://detectportal.firefox.com/success.txt'
     interval: 800
     tolerance: 300
     proxies:
-      - *
+      - Ꮮᝪᑎᑌᑭ
   - name: 🔹fallback◈1
     type: fallback
     url: 'http://www.google-analytics.com/generate_204'
     interval: 700
     proxies:
-      - *
+      - Ꮮᝪᑎᑌᑭ
   - name: 🔹fallback◈2
     type: fallback
     url: 'http://cp.cloudflare.com/generate_204'
     interval: 700
     proxies:
-      - *
+      - Ꮮᝪᑎᑌᑭ
   - name: 🔹fallback◈3
     type: fallback
     url: 'http://www.qualcomm.cn/generate_204'
     interval: 700
     proxies:
-      - *
+      - Ꮮᝪᑎᑌᑭ
   - name: 🔹fallback◈4
     type: fallback
     url: 'http://connect.rom.miui.com/generate_204'
     interval: 700
     proxies:
-      - *
+      - Ꮮᝪᑎᑌᑭ
   - name: 🧠load-balance⇋1
     type: load-balance
     url: 'http://www.google.com/generate_204'
     interval: 666
     strategy: round-robin
     proxies:
-      - *
+      - Ꮮᝪᑎᑌᑭ
   - name: 🧠load-balance⇋2
     type: load-balance
-    url: 'https://raw.githubusercontent.com/LonUp/NodeList/main/URL_TEST.yaml'
+    url: 'http://cp.cloudflare.com/'
     interval: 666
     strategy: consistent-hashing
     proxies:
-      - *
+      - Ꮮᝪᑎᑌᑭ
   - name: 🧠load-balance⇋3
     type: load-balance
     url: 'http://www.msftconnecttest.com/connecttest.txt'
     interval: 666
     strategy: round-robin
     proxies:
-      - *
+      - Ꮮᝪᑎᑌᑭ
   - name: 🧠load-balance⇋4
     type: load-balance
     url: 'http://www.apple.com/library/test/success.html'
     interval: 666
     strategy: consistent-hashing
     proxies:
-      - *
+      - Ꮮᝪᑎᑌᑭ
   - name: ⚓Direct
     type: select
     proxies:
@@ -258,7 +262,7 @@ rule-providers:
 rules:
   - GEOIP,IR,⚓Direct
   - DOMAIN-SUFFIX,ir,⚓Direct
-  - MATCH ,🌐ALL ⟪@LonUp_M⟫
+  - MATCH ,👑Groups
   - RULE-SET,iran,⚓Direct
   - RULE-SET,AntiAd,⛔BLOCK
   - GEOIP,LAN,⚓Direct
@@ -279,25 +283,25 @@ rules:
   - IP-CIDR6,fc00::/7,⚓Direct,no-resolve
   - IP-CIDR6,fe80::/10,⚓Direct,no-resolve
   - IP-CIDR6,fd00::/8,⚓Direct,no-resolve
-  - DOMAIN-KEYWORD,1e100,🌐ALL ⟪@LonUp_M⟫
-  - DOMAIN-KEYWORD,abema,🌐ALL ⟪@LonUp_M⟫
-  - DOMAIN-KEYWORD,appledaily,🌐ALL ⟪@LonUp_M⟫
-  - DOMAIN-KEYWORD,avtb,🌐ALL ⟪@LonUp_M⟫
-  - DOMAIN-KEYWORD,beetalk,🌐ALL ⟪@LonUp_M⟫
-  - DOMAIN-KEYWORD,blogspot,🌐ALL ⟪@LonUp_M⟫
-  - DOMAIN-KEYWORD,dropbox,🌐ALL ⟪@LonUp_M⟫
-  - DOMAIN-KEYWORD,facebook,🌐ALL ⟪@LonUp_M⟫
-  - DOMAIN-KEYWORD,fbcdn,🌐ALL ⟪@LonUp_M⟫
-  - DOMAIN-KEYWORD,google,🌐ALL ⟪@LonUp_M⟫
-  - DOMAIN-KEYWORD,instagram,🌐ALL ⟪@LonUp_M⟫
-  - DOMAIN-KEYWORD,porn,🌐ALL ⟪@LonUp_M⟫
-  - DOMAIN-KEYWORD,sci-hub,🌐ALL ⟪@LonUp_M⟫
-  - DOMAIN-KEYWORD,spotify,🌐ALL ⟪@LonUp_M⟫
-  - DOMAIN-KEYWORD,telegram,🌐ALL ⟪@LonUp_M⟫
-  - DOMAIN-KEYWORD,twitter,🌐ALL ⟪@LonUp_M⟫
-  - DOMAIN-KEYWORD,whatsapp,🌐ALL ⟪@LonUp_M⟫
-  - DOMAIN-KEYWORD,youtube,🌐ALL ⟪@LonUp_M⟫
-  - DOMAIN-KEYWORD,instagram,🌐ALL ⟪@LonUp_M⟫
+  - DOMAIN-KEYWORD,1e100,🌐ALL 〄 Ꮮᝪᑎᑌᑭ
+  - DOMAIN-KEYWORD,abema,🌐ALL 〄 Ꮮᝪᑎᑌᑭ
+  - DOMAIN-KEYWORD,appledaily,🌐ALL 〄 Ꮮᝪᑎᑌᑭ
+  - DOMAIN-KEYWORD,avtb,🌐ALL 〄 Ꮮᝪᑎᑌᑭ
+  - DOMAIN-KEYWORD,beetalk,🌐ALL 〄 Ꮮᝪᑎᑌᑭ
+  - DOMAIN-KEYWORD,blogspot,🌐ALL 〄 Ꮮᝪᑎᑌᑭ
+  - DOMAIN-KEYWORD,dropbox,🌐ALL 〄 Ꮮᝪᑎᑌᑭ
+  - DOMAIN-KEYWORD,facebook,🌐ALL 〄 Ꮮᝪᑎᑌᑭ
+  - DOMAIN-KEYWORD,fbcdn,🌐ALL 〄 Ꮮᝪᑎᑌᑭ
+  - DOMAIN-KEYWORD,google,🌐ALL 〄 Ꮮᝪᑎᑌᑭ
+  - DOMAIN-KEYWORD,instagram,🌐ALL 〄 Ꮮᝪᑎᑌᑭ
+  - DOMAIN-KEYWORD,porn,🌐ALL 〄 Ꮮᝪᑎᑌᑭ
+  - DOMAIN-KEYWORD,sci-hub,🌐ALL 〄 Ꮮᝪᑎᑌᑭ
+  - DOMAIN-KEYWORD,spotify,🌐ALL 〄 Ꮮᝪᑎᑌᑭ
+  - DOMAIN-KEYWORD,telegram,🌐ALL 〄 Ꮮᝪᑎᑌᑭ
+  - DOMAIN-KEYWORD,twitter,🌐ALL 〄 Ꮮᝪᑎᑌᑭ
+  - DOMAIN-KEYWORD,whatsapp,🌐ALL 〄 Ꮮᝪᑎᑌᑭ
+  - DOMAIN-KEYWORD,youtube,🌐ALL 〄 Ꮮᝪᑎᑌᑭ
+  - DOMAIN-KEYWORD,instagram,🌐ALL 〄 Ꮮᝪᑎᑌᑭ
   - DOMAIN-KEYWORD,admarvel,⛔BLOCK
   - DOMAIN-KEYWORD,admaster,⛔BLOCK
   - DOMAIN-KEYWORD,adsage,⛔BLOCK
